[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polarctic"
version = "0.1.0"
description = "Python plugin to read ArcticDB frames from polars"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
dependencies = [
    "arcticdb",
    "polars",
]
authors = [
    {name = "Johan Mabille"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/JohanMabille/polarctic"
Repository = "https://github.com/JohanMabille/polarctic"

[tool.setuptools]
packages = ["polarctic"]

[tool.setuptools.package-dir]
polarctic = "src/polarctic"
